chart spacing fixes, spelling/grammar corrections

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -97,7 +97,7 @@ html, body {
 
 #chart-panel2 {
   max-width: 80%;
-  height: 95vh;  
+  /*height: 95vh; */
 }
 
 .panel-body {
@@ -106,6 +106,7 @@ html, body {
 }
 
 #chartDiv {
+  height: 80vh;
   position: relative;
   z-index: 0;
 }
